--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -1,10 +1,14 @@
 page-new {
-
+  
     ion-textarea {
         background-color: #eee;
-        border: 1px solid #aaa;
+        border: 2px solid #aaa;
         border-radius: 5px;
         padding: 10px;
+    }
+     p.error_txt{
+        text-align: center;
+        color: #f53d3d;
     }
 
 }
