--- a/src/pages/scan/scan.scss
+++ b/src/pages/scan/scan.scss
@@ -4,4 +4,8 @@ page-scan {
         margin: auto !important;
         display: block !important;
     }
+    p.error_txt{
+        text-align: center;
+        color: #f53d3d;
+    }
 }
