--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,9 +33,11 @@ $app-direction: ltr;
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 
+//colors default  primary:#488aff, secondary:#32db64, danger: #f53d3d,light:#f4f4f4,dark: #222
+
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    #fc9303,
+  secondary:  #dcdcdc,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
